<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tin612.exercise1.Step2">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/salaryTextView"
            android:text="@string/y_salary"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/seekBarLayout"
            android:layout_below="@id/salaryTextView"
            >
            <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/salarySeekBar"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:max="100000"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/salarySeekBar"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/salarySeekBar"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:text="$100000"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/questionTextView"
            android:layout_below="@id/seekBarLayout"
            android:text="@string/w_sport"
            android:layout_marginTop="10dp"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxLayout"
            android:layout_below="@id/questionTextView"
            android:padding="5dp"
            android:stretchColumns="0,1,2"
            >
            <TableRow>
                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sport_1"
                    />
                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sport_2"
                    />
                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sport_3"
                    />
            </TableRow>
            <TableRow
                android:layout_marginTop="20dp"
                >
                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sport_4"
                    />
                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sport_5"
                    />
                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sport_6"
                    />
            </TableRow>
        </TableLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/doneButton"
            android:background="@drawable/border"
            android:text="@string/done"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_below="@id/checkBoxLayout"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
</RelativeLayout>
